Add comprehensive tests for repo_inspector modules
- Introduced tests for the CLI entry point to ensure environment loading and app execution.
- Added extensive tests for the cloner module, covering cloning, directory listing, file reading, and dependency detection.
- Implemented tests for code analysis functions, validating folder analysis and dependency report generation.
- Created extended tests for the fetcher module, including handling SAML authentication, rate limits, and various GitHub API interactions.
- Developed functional tests for analyzing functional areas and gathering code samples from directories.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,5 +70,11 @@
     "plaintext": true,
     "markdown": true,
     "yaml": true
+  },
+  "chat.tools.terminal.autoApprove": {
+    "/^cd /home/marco/hackfest-techconnect && \\.venv/bin/python -m pytest tests/ --cov=src/repo_inspector --cov-report=term-missing 2>&1 \\| tail -40$/": {
+      "approve": true,
+      "matchCommandLine": true
+    }
   }
 }
